# gridcore

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  BENCHMARK_ANALYSIS.md  BLOCKERS.md  DEMO.md  E2E_TEST_FIX_PLAN.md  HYBRID_REFACTOR_PLAN.md  INTEGRATION_TEST_PLAN.md  MODE_CONSOLIDATION_PLAN.md  MULTI_TAB_IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REDUCE_STATE.md  RUST_IMPLEMENTATION_PLAN.md  VIM_MODE_ADDITIONS_PLAN.md  api_before.txt  benchmark-comparison.md  biome.jsonc  build-and-run.sh  build.sh  debug-batch.ts  dev.sh  package.json  playwright.config.ts  serve.js  test-addr.ts  test-build.sh  test-debug.ts  test-debug2.ts  test-error-handling.html  test-focus.js  test-insert-delete.ts  test-insert-mode.spec.ts  test-manual-errors.html  test-performance-metrics.html  test-performance-metrics.ts  test-phase6-performance.ts  test_debug.rs  (+2 more)
docs/: UI_LEPTOS.md  (+15 more)
gridcore-rs/: COMPLEXITY_REDUCTION_PROGRESS.md  Cargo.toml  DEMO_MODE_PLAN.md  LEPTOS_UI_MIGRATION_PLAN.md  PHASE_4_1_CLONE_AUDIT.md  PHASE_4_2_BENCHMARK_RESULTS.md  REFACTORING_PROGRESS.md  STATE_MACHINE.md  STATE_REDUCTION_PLAN.md  build-wasm.sh  crate_stats.sh  crate_stats_no_tests.sh  migrate-to-core.sh  test_visual_mode.md  tests_before.txt
gridcore-rs/.cargo/: config.toml
gridcore-rs/.claude/: settings.local.json
gridcore-rs/benches/: Cargo.toml  README.md
gridcore-rs/benches/src/: lib.rs  memory_bench.rs
gridcore-rs/benches/src/controller/: event_handling_bench.rs  mod.rs  selection_bench.rs  viewport_bench.rs  vim_bench.rs
gridcore-rs/benches/src/core/: fill_bench.rs  mod.rs  structural_ops_bench.rs
gridcore-rs/benches/src/ui/: interaction_bench.rs  mod.rs  render_bench.rs
gridcore-rs/gridcore-controller/: Cargo.toml  build.sh  package.json
gridcore-rs/gridcore-controller/src/: lib.rs  perf.rs  rust-adapter.ts  types.ts  utils.rs
gridcore-rs/gridcore-controller/src/behaviors/: autocomplete.rs  mod.rs  resize.rs  selection_stats.rs  shared.rs
gridcore-rs/gridcore-controller/src/controller/: cell_editor.rs  event_handling.rs  events.rs  events_test.rs  formula_bar.rs  input_handler.rs  managers.rs  mod.rs  mode.rs  operations.rs  sheet_management.rs  sheets.rs  spreadsheet.rs  spreadsheet_test.rs  state_access.rs  tests.rs  viewport.rs  vim_handler.rs
gridcore-rs/gridcore-controller/src/managers/: autocomplete.rs  error.rs  error_formatter.rs  error_manager.rs  mod.rs  resize.rs  selection.rs  selection_stats.rs
gridcore-rs/gridcore-controller/src/state/: actions.rs  complex_transition_tests.rs  context.rs  diff.rs  edge_case_tests.rs  machine.rs  machine_optimized.rs  mod.rs  performance_tests.rs  refactoring_tests.rs  spreadsheet.rs  spreadsheet.rs.backup  test_fix.patch  tests.rs  transitions.rs
gridcore-rs/gridcore-controller/src/wasm/: controller.rs  events.rs  mod.rs  state.rs  viewport.rs
gridcore-rs/gridcore-controller/tests/: integration_tests.rs  perf_test.rs  visual_mode_tests.rs  wasm_integration.test.ts
gridcore-rs/gridcore-core/: Cargo.toml  PHASE_3_2_PLAN.md
gridcore-rs/gridcore-core/.claude/: settings.local.json
gridcore-rs/gridcore-core/benches/: fill_bench.rs  memory_bench.rs  memory_bench_simple.rs  optimization_bench.rs  structural_ops_bench.rs  transformer_bench.rs  undo_redo_benchmark.rs
gridcore-rs/gridcore-core/docs/completed-phases/: PHASE_3_2_COMPLETION_SUMMARY.md
gridcore-rs/gridcore-core/src/: constants.rs  error.rs  lib.rs  perf.rs
gridcore-rs/gridcore-core/src/adapters/: event_adapter.rs  event_adapter_v2.rs  mod.rs  repository_adapter.rs
gridcore-rs/gridcore-core/src/command/: command.rs  execution.rs  mod.rs  tests.rs  undo_redo_manager.rs
gridcore-rs/gridcore-core/src/dependency/: analyzer.rs  graph.rs  mod.rs
gridcore-rs/gridcore-core/src/domain/: cell.rs  mod.rs
gridcore-rs/gridcore-core/src/error/: mod.rs  recovery.rs
gridcore-rs/gridcore-core/src/evaluator/: context.rs  engine.rs  evaluator.rs  functions.rs  helpers.rs  mod.rs  operators.rs  wasm.rs
gridcore-rs/gridcore-core/src/facade/: batch.rs  event.rs  mod.rs  spreadsheet_facade.rs  spreadsheet_facade_v2.rs  wasm.rs
gridcore-rs/gridcore-core/src/fill/: adjuster.rs  engine.rs  mod.rs  tests.rs  wasm.rs
gridcore-rs/gridcore-core/src/formula/: ast.rs  expression_builder.rs  mod.rs  parser.rs  parser_tests.rs  tokenizer.rs  transformer.rs  wasm.rs
gridcore-rs/gridcore-core/src/ports/: event_port.rs  mod.rs  repository_port.rs
gridcore-rs/gridcore-core/src/references/: adjuster.rs  detector.rs  mod.rs  parser.rs  tests.rs  tracker.rs
gridcore-rs/gridcore-core/src/repository/: cell_repository.rs  mod.rs
gridcore-rs/gridcore-core/src/services/: batch_manager.rs  batch_service.rs  batch_service.rs.old  calculation_service.rs  cell_operations.rs  cell_operations.rs.old  container.rs  container_v2.rs  event_manager.rs  events.rs  mod.rs  structural_operations.rs
gridcore-rs/gridcore-core/src/test_utils/: mod.rs
gridcore-rs/gridcore-core/src/traits/: mod.rs
gridcore-rs/gridcore-core/src/types/: cell_address.rs  cell_value.rs  error_type.rs  js_conversion.rs  mod.rs
gridcore-rs/gridcore-core/src/utils/: formatting.rs  mod.rs  object_pool.rs  string_intern.rs
gridcore-rs/gridcore-core/src/wasm_api/: evaluator.rs  facade.rs  mod.rs  workbook.rs
gridcore-rs/gridcore-core/src/workbook/: mod.rs  sheet.rs  sheet_manager.rs  tests.rs  types.rs  wasm.rs  workbook.rs
gridcore-rs/gridcore-demo/: Cargo.toml
gridcore-rs/gridcore-demo/src/: lib.rs  utils.rs
gridcore-rs/gridcore-demo/src/benchmark/: runner.rs
gridcore-rs/gridcore-ui/: Cargo.toml  README.md  Trunk.toml  index.html
gridcore-rs/gridcore-ui/scripts/: optimize-wasm.sh
gridcore-rs/gridcore-ui/src/: app.rs  context.rs  debug.rs  lib.rs  main.rs  metrics_collector.rs  metrics_recorder.rs  perf.rs
gridcore-rs/gridcore-ui/style/: main.css
gridcore-rs/gridcore-wasm/: Cargo.toml  package.json  test-output.js  test-parse.js
gridcore-rs/gridcore-wasm/src/: lib.rs
gridcore-rs/gridcore-wasm/test/: evaluator.test.ts  formula-parser.test.ts
gridcore-rs/scripts/: audit_clones.sh
(+188 files in other folders)
