[workspace]
members = ["gridcore-core", "gridcore-wasm", "gridcore-controller"]
resolver = "2"

[workspace.dependencies]
chumsky = { version = "0.10", default-features = false, features = ["pratt"] }
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
petgraph = { version = "0.8", default-features = false }
js-sys = "0.3"
web-sys = "0.3"
regex = { version = "1.11", default-features = false, features = [
  "std",
  "perf",
] }
chrono = { version = "0.4", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
