[workspace]
members = [
  "gridcore-core",
  "gridcore-controller",
  "gridcore-ui",
]
resolver = "2"

[workspace.dependencies]
chumsky = { version = "0.10", default-features = false, features = ["pratt"] }
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
petgraph = { version = "0.8", default-features = false }
js-sys = "0.3"
web-sys = "0.3"
regex = { version = "1.11", default-features = false, features = [
  "std",
  "perf",
] }
chrono = { version = "0.4", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Specialized profile for WASM builds with maximum size optimization
[profile.wasm-release]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
