[package]
name = "gridcore-controller"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gridcore-core = { path = "../gridcore-core" }
thiserror = { workspace = true }
serde = { workspace = true }

[features]
default = []
wasm = [
  "dep:wasm-bindgen",
  "dep:js-sys",
  "dep:web-sys",
  "dep:serde-wasm-bindgen",
  "dep:serde_json",
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:log",
  "gridcore-core/wasm",
]

[dependencies.wasm-bindgen]
workspace = true
optional = true

[dependencies.js-sys]
workspace = true
optional = true

[dependencies.web-sys]
workspace = true
optional = true
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Event",
  "KeyboardEvent",
  "MouseEvent",
]

[dependencies.serde-wasm-bindgen]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.console_log]
version = "1.0"
optional = true
features = ["color"]

[dependencies.log]
version = "0.4"
optional = true

[dev-dependencies]
criterion = "0.5"
wasm-bindgen-test = "0.3"
serde_json = { workspace = true }

# [[bench]]
# name = "controller_bench"
# harness = false