[package]
name = "gridcore-controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
gridcore-core = { path = "../gridcore-core" }
thiserror = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
log = "0.4"
wasm-logger = "0.2"
rustc-hash = "2.1.1"
chrono = { version = "0.4", features = ["wasmbind"] }
chumsky = { workspace = true }

[dev-dependencies]
criterion = "0.7"
serde_json = { workspace = true }

# [[bench]]
# name = "controller_bench"
# harness = false
