[package]
name = "gridcore-controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
gridcore-core = { path = "../gridcore-core" }
thiserror = { workspace = true }
serde = { workspace = true }
log = "0.4"
wasm-logger = "0.2"
rustc-hash = "2.1.1"
chrono = { version = "0.4", features = ["wasmbind"] }
chumsky = { workspace = true }
once_cell = "1.21.3"

# Performance monitoring (optional)
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
perf = ["metrics", "tracing", "gridcore-core/perf"]

[dev-dependencies]
serde_json = { workspace = true }
