[package]
name = "gridcore-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
chumsky = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
petgraph = { workspace = true }
regex = { workspace = true, default-features = false, features = [
  "std",
  "perf",
] }
chrono = { workspace = true, default-features = false, features = [
  "clock",
  "std",
] }
uuid = { version = "1.17", features = ["v4", "js"] }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "transformer_bench"
harness = false

[[bench]]
name = "structural_ops_bench"
harness = false

[[bench]]
name = "undo_redo_benchmark"
harness = false

[[bench]]
name = "fill_bench"
harness = false
