[package]
name = "gridcore-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
chumsky = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "std", "rc"] }
petgraph = { workspace = true }
regex = { workspace = true, default-features = false, features = [
  "std",
  "perf",
] }
chrono = { workspace = true, default-features = false, features = [
  "std",
  "wasmbind",
  "clock",
] }
uuid = { version = "1.18.0", features = ["v4", "js"] }
rustc-hash = "2.1.1"
once_cell = "1.21.3"
smallvec = "1.15.1"

[dev-dependencies]
criterion = "0.7"
