[package]
name = "gridcore-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[[bin]]
name = "demo-runner"
path = "src/bin/demo_runner.rs"
required-features = ["runner"]
bench = false

[dependencies]
gridcore-core = { path = "../gridcore-core" }
gridcore-controller = { path = "../gridcore-controller" }

# UI dependencies (optional when used with gridcore-ui)
leptos = { version = "0.8", features = ["csr"], optional = true }
web-sys = { version = "0.3", features = [
  "Performance",
  "Window",
  "Document",
  "console",
  "HtmlElement",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
rand = { version = "0.9" }
getrandom = { version = "0.3", features = ["wasm_js"] }

# For standalone runner
clap = { version = "4.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = ["web"]
web = ["leptos", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
runner = ["clap", "tokio"]