[package]
name = "gridcore-ui"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gridcore-core = { path = "../gridcore-core" }
gridcore-controller = { path = "../gridcore-controller" }
leptos = { version = "0.8", features = ["csr"] }
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlDivElement",
  "HtmlElement",
  "Window",
  "Document",
  "Element",
  "MouseEvent",
  "KeyboardEvent",
  "Event",
  "EventTarget",
  "DomRect",
  "CssStyleDeclaration",
  "console",
  "Performance",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
default = []
debug = ["console_error_panic_hook"]
